--- a/first1.html
+++ b/first1.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<!-- Ничего особенного просто Гит Хаб тестирую -->
+<!-- Учусь решать кофликты  -->
 <p>This is a paragraph.</p>
 
 </body>
